--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
     "event-stream": "^3.3.1",
     "gulp": "^3.8.11",
     "gulp-angular-gettext": "^2.1.0",
+    "gulp-angular-templatecache": "^1.8.0",
     "gulp-bower": "0.0.10",
-    "gulp-cdnizer": "^1.1.4",
     "gulp-concat": "^2.5.2",
-    "gulp-html-replace": "^1.4.4",
+    "gulp-csso": "^1.0.1",
+    "gulp-filter": "^3.0.1",
+    "gulp-flatten": "^0.2.0",
+    "gulp-htmlmin": "^1.3.0",
+    "gulp-inject": "^3.0.0",
     "gulp-less": "^3.0.3",
-    "gulp-minify-css": "^1.0.0",
-    "gulp-minify-html": "^1.0.1",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-ng-annotate": "^0.5.2",
-    "gulp-ng-html2js": "^0.2.0",
+    "gulp-replace": "^0.5.4",
+    "gulp-rev": "^6.0.1",
+    "gulp-rev-replace": "^0.4.3",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^3.0.5",
     "request": "^2.60.0"
   }
 }
