--- a/bower.json
+++ b/bower.json
@@ -27,7 +27,8 @@
     "webshim": "~1.15.8",
     "ui-select": "angular-ui-select#~0.13.1",
     "angular-sanitize": "~1.3",
-    "SpinKit": "spinkit#~1.2.2"
+    "SpinKit": "spinkit#~1.2.2",
+    "angular-cas-auth-api": "~0.1"
   },
   "ignore": [
     "**/.*",
